refactor(runtime): drop SHA-1 from transformer hot path, add @Inject to example
Quick-win sweep:

- MixinTransformer now reads precomputed [mangled, dispatch] names from
  MixinDescriptor.synthetics() instead of recomputing SHA-1 per @Overwrite at
  transform time. The runtime NameMangling helper and MixinTransformer.
  mangledName/dispatchName/sha1Hex16 are gone; a private SHA-1 inline survives
  in MixinDescriptor.fromAnnotations purely for the legacy (no $$Descriptor)
  fallback. HyperMixins.installHandles uses the same lookup table.
- WorldMixin gains a @Inject(method="addPlayer", at=HEAD) handler so the example
  exercises every column of injectEntries() end-to-end (overwrite + original +
  redirect + inject + synthetics all populated in the generated descriptor).
- MixinDescriptorDemo: small main that loads WorldMixin's descriptor via
  MixinDescriptor.load and prints every column plus MixinsConfig.discoverAll
  output — proves the compile-time → runtime pipeline outside the test sourceset.
- MixinsConfig.listYamlsUnder switches from new URL(String) to URI.create(...)
  .toURL(), clearing the JDK 21+ deprecation warning.
- MixinDescriptor and MixinSymbolProcessor both carry the same ABI table in a
  comment so future schema changes hit a code review touchpoint on both sides.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>